--- a/views/auth/changePassword.hbs
+++ b/views/auth/changePassword.hbs
@@ -1,25 +1,26 @@
 <h3>Change your password</h3>
 <h4>Username: {{userInSession.username}}</h4>
 <br>
+<br>
 <form action="/change-password" method="post">
 
 <div class="pass-input">
-    <label for="">
+    <label id="label-changePass" for="">
         Old Password
-        <input type="text" name="oldpass">
+        <input id="input-changePass" type="text" name="oldpass">
     </label>
 </div>
-<br>
+
 <div class="pass-input">
-    <label for="">
+    <label id="label-changePass" for="">
         New Password
-        <input type="text" name="newpass">
+        <input id="input-changePass" type="text" name="newpass">
     </label>
 </div>
 <div class="pass-input">
-    <label for="">
+    <label id="label-changePass" for="">
         Confirm New Password
-        <input type="text" name="confirmnewpass">
+        <input id="input-changePass" type="text" name="confirmnewpass">
     </label>
 </div>
 <br>
