--- a/views/auth/changePassword.hbs
+++ b/views/auth/changePassword.hbs
@@ -26,5 +26,5 @@
 <br>
 
 
-<button class="gamefaq-btn">Submit</button>
+<button class="gamefaq-img-btn">Submit <img id="myLogoutButton" src="../images/submit.png" alt=""> </button>
 </form>
