--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -2,7 +2,8 @@
 <body class="signup-page">
   
 <div id="form">
-  <h2>Signup</h2>
+  <h2>Sign Up</h2>
+  <br>
   <form action="/signup" method="POST">
  
     <label> Username
@@ -16,8 +17,9 @@
     <label> Password
       <input type="password" name="password" placeholder="********" />
     </label>
- 
-    <button class="gamefaq-btn" type="submit">Create account</button>
+ <br>
+ <br>
+    <button class="gamefaq-img-btn" type="submit">Create account <img id="myLogoutButton" src="../images/createacc.png" alt=""></button>
  
     {{!-- error message will be added here --}}
 
