--- a/views/threads/edit-comment.hbs
+++ b/views/threads/edit-comment.hbs
@@ -1,17 +1,6 @@
 <h1>COMMENT COLLECTION TEST</h1>
 <h1>HERE: {{comment}}</h1>
 
-
-
-
-
-
-
-
-
-
-
-
 <h2>EDIT COMMENT</h2>
 {{!-- {{_id}} --}}
 {{!-- the action portion of the form is what determines the route that you will be calling when you submit the form --}}
@@ -31,5 +20,5 @@
   <input style="display: none" type="text" name="threadId" value="{{threadId}}" />
  {{/if}}
 
-    <button class="gamefaq-btn">Update</button>
+    <button class="gamefaq-img-btn">Update <img id="myLogoutButton" src="../update.png" alt=""> </button>
 </form>
