--- a/views/threads/new-thread.hbs
+++ b/views/threads/new-thread.hbs
@@ -22,7 +22,7 @@
 
 
     <br>
-    <button class="gamefaq-btn">Post</button>
+    <button class="gamefaq-img-btn">Post <img id="myLogoutButton" src="../images/post.png" alt=""> </button>
     {{!-- buttons in forms will auto sync to the form and when clicked will submit the data from the form using the endpoint (action) and the method (method) that is defined in the form parameters at the top --}}
 </form>
 
