--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -35,7 +35,7 @@
 {{#if currentUser}}
 
              <form id="logout-form" action="/logout" method="POST">
-            <button class="gamefaq-btn"><img src="/public/images/2767155.png" alt="logout"> Logout </button>
+            <button class="gamefaq-img-btn"> Logout <img id="myLogoutButton" src="../images/2767155.png" alt="logout"></button>
            </form> 
 {{else}}
 
