small tweaks, every working and done

--- a/views/threads/thread-details.hbs
+++ b/views/threads/thread-details.hbs
@@ -29,7 +29,7 @@ document.getElementById(`form-id{{_id}}`).submit();
 
 <div class = "comments">
 <div class="commentsHeader">
-<div class ="commentPoster">{{posterId.username}} | {{age}} minutes ago</div>
+<div class ="commentPoster">{{posterId.username}}</div>
 
 
 </div>
