--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,7 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<br><br>
+
+
+<h1>Game Forum App</h1>
+
+<br>
+<p>Welcome to Game Forum App by Ryan Essel and Alec Santamaria</p>
